# MPI_Syrk_implentation

./: .gitignore  CMakeLists.txt  EvaluationScript.R  LICENSE  MPI_SYRK_implementation  MPI_Syrk_implementation.h  README.md  batch.sh  blas.pc  main  main.c
.github/workflows/: build-and-test.yml
CMakeModules/: BLASConfig.cmake  MPIConfig.cmake
resource/: Check.R  GernateTestdata.R
resource/in/: test1000000x10.csv  test10000x10.csv  test10x10.csv  test10x1000.csv  test10x100000.csv  test10x1000000.csv  test50000x10.csv
resource/input/: test16x6.csv  test2x12.csv  test2x3.csv  test2x4.csv  test30x20.csv  test40x60.csv  test60x40.csv
resource/output/: result30x20.csv  result60x40.csv
src/: CMakeLists.txt  MPI_Syrk_implementation.c  MPI_Syrk_implementation.h  main.c  one_d_syrk.c  one_d_syrk.h  two_d_syrk.c  two_d_syrk.h
test/: CMakeLists.txt  result10x5.csv  result2x12.csv  result2x3.csv  result2x4.csv  result60x40.csv  script60x40.sh  test.cpp  test2x3.csv  test2x4.csv  test30x20.csv  test_parseInput.cpp
test/in/: test10000000x10.csv  test100000x10.csv  test1000x10.csv  test100x10.csv  test10x10.csv  test10x100.csv  test10x10000.csv  test10x10000000.csv
test/input/: test10x5.csv  test2x12.csv  test2x3.csv  test60x40.csv
test/output/: result10x5.csv  result2x12.csv  result2x3.csv  result2x4.csv  result30x20.csv
